# mddn-hub

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DATASET_REQUIREMENTS.md  README.md  REVIEW_GUIDELINES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: validate.yml
datasets/ligand_unbinding_demo/: checksums.json  citation.bib  dataset_card.md  download.yaml  label_statistics.json  manifest.json  metadata.json
datasets/ligand_unbinding_demo_from_cli/: baseline_metrics.json  checksums.json  dataset_card.md  download.yaml  label_statistics.json  manifest.json  metadata.json
docs/: cli_to_hub.md  contribution_flow.md  split_policies.md  storage_profiles.md  tasks.md  training_from_hub.md
registry/: index.json
schemas/: checksums.schema.json  download.schema.json  manifest.schema.json  metadata.schema.json  task.schema.json
scripts/: build_index.py  e2e_cli_hub_demo.py  validate_all.py  validate_entry.py
