[project]
name = "mddatanet-hub"
version = "0.1.0"
description = "Metadata registry and benchmark ecosystem for molecular dynamics trajectory-learning datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "jsonschema>=4.21",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = []

[tool.ruff]
line-length = 88
target-version = "py310"
